2020-11-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Revert 6ef15ce5aecc, FT_UNUSED is public again.

	* mac/ftoldmac.c, src/ftbench.c, src/ftchkwd.c, src/ftcommon.c:
	Do not need `compiler-macros.h'.

2020-11-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Add hinting info to the standard header.

	* src/ftcommon.c (FTDemo_Get_Info): Extract some driver settings.
	(FTDemo_Draw_Header): Report hinting and target info.

2020-11-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftmulti.c (Clear_Display): Use size_t.

2020-11-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid,ftmulti,ftdiff] Fix up layout for the larger font.

	* src/ftgrid.c (DO_DOTNUMBERS): Rely on GR_FONT_SIZE.
	* src/ftmulti.c, src/ftdiff.c: Use HEADER_HEIGHT equal to 12.

2020-11-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Switch to larger 8x14 font.

	* graph/grconfig.h (GR_FONT_SIZE): New option defined as 14.
	* graph/grfont.[ch]: Add another font size.

2020-11-05  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgamma.c (main): Enforce rgb24.

2020-11-05  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/*, graph/*: s/unsigned int/size_t/ where appropriate.

2020-11-04  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/*.*: s/0/NULL/ where appropriate.

2020-11-04  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/*.*: Rearrange some headers.

2020-11-04  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ttdebug.c (Cur_U_Line, RunIns): Reset buffers explicitly.

2020-11-04  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Fix typos introduced 2020-09-17.

	* src/ttdebug.c (display_changed_points): Use correct point arrays
	again.

2020-11-02  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grblit.c (blit_gray8_to_{555,565}): Fix color.

2020-11-02  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Add 15-bit mode to `gblblit'.

	No target depths left for legacy `grblit' except mono, pal4, pal8.
